[package]
name = "axerrno"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Error code definition used by ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/arceos/tree/main/crates/axerrno"
documentation = "https://arceos-org.github.io/arceos/axerrno/index.html"

[dependencies]
log = "0.4"
