[package]
name = "axfs_vfs"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
log = "0.4"
bitflags = "2.1"
axerrno = { path = "../axerrno" }
