[package]
name = "axfs_vfs"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Virtual filesystem interfaces used by ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/axfs_vfs"
documentation = "https://rcore-os.github.io/arceos/axfs_vfs/index.html"

[features]
default = []

[dependencies]
log = "0.4"
bitflags = "2.2"
axerrno = { path = "../axerrno" }
