[package]
name = "capability"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Provide basic capability-based security"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/capability"
documentation = "https://rcore-os.github.io/arceos/capability/index.html"

[dependencies]
bitflags = "2.2"
axerrno = { path = "../axerrno" }
