[package]
name = "capability"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Provide basic capability-based security"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/arceos/tree/main/crates/capability"
documentation = "https://arceos-org.github.io/arceos/capability/index.html"

[dependencies]
bitflags = "2.6"
axerrno = { path = "../axerrno" }
