[package]
name = "crate_interface"
version = "0.1.1"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Provides a way to define an interface (trait) in a crate, but can implement or use it in any crate."
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/arceos/tree/main/crates/crate_interface"
documentation = "https://docs.rs/crate_interface"
keywords = ["arceos", "api", "macro"]
categories = ["development-tools::procedural-macro-helpers", "no-std"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
