[package]
name = "driver_block"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Common traits and types for block storage drivers"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/arceos/tree/main/crates/driver_common"
documentation = "https://arceos-org.github.io/arceos/driver_common/index.html"

[features]
ramdisk = []
bcm2835-sdhci = ["dep:bcm2835-sdhci"]
default = []

[dependencies]
log = "0.4"
driver_common = { path = "../driver_common" }
bcm2835-sdhci = { git = "https://github.com/lhw2002426/bcm2835-sdhci.git", rev = "e974f16", optional = true }
