[package]
name = "driver_common"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Device driver interfaces used by ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/driver_common"
documentation = "https://rcore-os.github.io/arceos/driver_common/index.html"

[dependencies]
