[package]
name = "driver_common"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Device driver interfaces used by ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/arceos/tree/main/crates/driver_common"
documentation = "https://arceos-org.github.io/arceos/driver_common/index.html"

[dependencies]
