[package]
name = "driver_display"
version = "0.1.0"
edition = "2021"
authors = ["Shiping Yuan <robert_yuan@pku.edu.com>"]
description = "Common traits and types for graphics device drivers"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/arceos/tree/main/crates/driver_display"
documentation = "https://arceos-org.github.io/arceos/driver_display/index.html"

[dependencies]
driver_common = { path = "../driver_common" }
