[package]
name = "driver_net"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>", "ChengXiang Qi <kuangjux@outlook.com>"]
description = "Common traits and types for network device (NIC) drivers"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/driver_net"
documentation = "https://rcore-os.github.io/arceos/driver_net/index.html"

[features]
default = []
ixgbe = ["dep:ixgbe-driver"]
axi-eth = ["dep:axi-ethernet", "dep:axi-dma"]

[dependencies]
spin = "0.9"
log = "0.4"
driver_common = { path = "../driver_common" }
ixgbe-driver = {git = "https://github.com/KuangjuX/ixgbe-driver.git", rev = "8e5eb74", optional = true}
axi-ethernet = { git = "https://github.com/zflcs/axi-ethernet.git", optional = true }
axi-dma = { git = "https://github.com/zflcs/axi-dma.git", rev = "aec3682", default-features = false, optional = true }
