[package]
name = "driver_pci"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Structures and functions for PCI bus operations"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/arceos/tree/main/crates/driver_pci"
documentation = "https://arceos-org.github.io/arceos/driver_pci/index.html"

[dependencies]
virtio-drivers = "0.7.3"
