[package]
name = "driver_virtio"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bus-mmio = []
bus-pci = []
block = ["driver_block"]
net = ["driver_net"]
gpu = ["driver_display"]
default = ["bus-mmio"]

[dependencies]
log = "0.4"
driver_common = { path = "../driver_common" }
driver_block = { path = "../driver_block", optional = true }
driver_net = { path = "../driver_net", optional = true }
driver_display = { path = "../driver_display", optional = true}
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers.git", rev = "0491154" }
